# CPGraph

./: .env  .env.example  .gitignore  LICENSE  README.md  create_vector_index.py  entity_merge.py  file_extract.py  llm_summary_service.py  llm_tracker.py  main.py  mcp.py  mcp_server.py  multi_threaded_extractor.py  new_test.py  pyproject.toml
lightrag/: constants.py  lightrag.py  operate.py  problem_extraction_prompt.py  prompt.py  query_extensions.py  timing.py  utils.py  utils_graph.py
lightrag/api/: config.py  lightrag_server.py  utils_api.py
lightrag/api/routers/: graph_routes.py  query_routes.py
lightrag/api/webui/: index.html
lightrag/api/webui/assets/: _basePickBy-9N9p4cSP.js  _baseUniq-dqcNSrw8.js  arc-BvJ8uwkj.js  architectureDiagram-VXUJARFQ-RWeZD_op.js  blockDiagram-VD42YOAC-BFUsP7xA.js  c4Diagram-YG6GDRKO-B4up5fEp.js  channel-Dg0abW3r.js  chunk-4BX2VUAB-DGKewkkA.js  chunk-55IACEB6-iI8TTo7a.js  chunk-B4BG7PRW-DqquIKAx.js  chunk-DI55MBZ5-CNleH3iP.js  chunk-FMBD7UC4-BtKTS7_i.js  chunk-QN33PNHL-CXHd5PsO.js  chunk-QZHKN3VN-FyOQGQ66.js  chunk-TZMSLE5B-CIwgl-8Z.js  classDiagram-2ON5EDUG-CTpZz2sl.js  clone-NgG_ycz6.js  cose-bilkent-S5V4N54A-QAtTtxYJ.js  dagre-6UL2VRFP-CxeeuAMx.js  diagram-PSM6KHXK-D8Y9SY8p.js  diagram-QEK2KX5R-B6qnK9Dg.js  diagram-S2PKOQOG-DCMtROfR.js  erDiagram-Q2GNP2WA-0aWhpRhx.js  flowDiagram-NV44I4VS-Bn-GwgfT.js  ganttDiagram-JELNMOA3-CQ_UV1XK.js  gitGraphDiagram-NY62KEGX-CHat5vjK.js  graph-BoXTliCe.js  index-BBcNdfB6.js  index-CulfZo91.js  index-D_78_C0B.css  infoDiagram-WHAUD3N6-PbM2BdXO.js  journeyDiagram-XKPGCS4Q-Dpk3WW02.js  kanban-definition-3W4ZIXB7-D6_wza9e.js  layout-9PxVb1HD.js  linear-CRMKM8xZ.js  mindmap-definition-VGOIOE7T-DlJ8Bs0L.js  pieDiagram-ADFJNKIX-BH7AWTLo.js  quadrantDiagram-AYHSOK5B-wYvoFpS7.js  requirementDiagram-UZGBJVZJ-DO2-BMAI.js  sankeyDiagram-TZEHDZUN-7DGIB1Uy.js  (+6 more)
lightrag/kg/: memgraph_impl.py  mongo_impl.py  neo4j_impl.py  networkx_impl.py
lightrag/llm/: openai.py
mcp_server/: kg_query_engine.py  main.py
merged_data/: chunks_backup.json  processed_entities.json  processed_relations.json
new_rag_storage/: entities.json  relations.json
src/: multi_threaded_extractor.py
