[project]
name = "cpgraph"
version = "0.1.0"
description = "A knowledge graph for competitive programming"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "ascii-colors==0.11.4",
    "async-timeout==5.0.1 ; python_full_version < '3.11'",
    "attrs==25.4.0",
    "authlib==1.6.6",
    "beartype==0.22.9",
    "cachetools==6.2.1",
    "certifi==2025.10.5",
    "cffi==2.0.0 ; platform_python_implementation != 'PyPy'",
    "charset-normalizer==3.4.4",
    "chroma-hnswlib>=0.7.6",
    "click==8.3.0",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "configparser==7.2.0",
    "cryptography==46.0.3",
    "cyclopts==4.4.0",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "docstring-parser==0.15",
    "docutils==0.22.3",
    "email-validator==2.3.0",
    "exceptiongroup==1.3.0",
    "fastmcp==2.13.3",
    "frozenlist==1.8.0",
    "future==1.0.0",
    "google-auth==2.45.0",
    "google-genai==1.55.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "json-repair==0.52.3",
    "jsonschema==4.25.1",
    "jsonschema-path==0.3.4",
    "jsonschema-specifications==2025.9.1",
    "markdown-it-py==4.0.0",
    "mcp==1.19.0",
    "mdurl==0.1.2",
    "multidict==6.7.0",
    "nano-vectordb==0.0.4.3",
    "networkx==3.4.2 ; python_full_version < '3.11'",
    "networkx==3.5 ; python_full_version >= '3.11'",
    "numpy==2.2.6 ; python_full_version < '3.11'",
    "numpy==2.3.4 ; python_full_version >= '3.11'",
    "openapi-pydantic==0.5.1",
    "packaging==25.0",
    "pandas==2.2.3",
    "pathable==0.4.4",
    "pathvalidate==3.3.1",
    "pipmaster==1.0.9",
    "platformdirs==4.5.0",
    "propcache==0.4.1",
    "py-key-value-aio==0.3.0",
    "py-key-value-shared==0.3.0",
    "py2neo>=2021.2.4",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23 ; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyperclip==1.11.0",
    "pypinyin==0.55.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pywin32==311 ; sys_platform == 'win32'",
    "pyyaml==6.0.3",
    "referencing==0.36.2",
    "regex==2025.10.23",
    "requests==2.32.5",
    "rich==13.9.4",
    "rich-rst==1.3.2",
    "rpds-py==0.30.0",
    "rsa==4.9.1",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sse-starlette==3.0.4",
    "starlette==0.49.1",
    "tenacity==9.1.2",
    "tiktoken==0.12.0",
    "tomli==2.3.0 ; python_full_version < '3.11'",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.38.0",
    "wcwidth==0.2.14",
    "websockets==15.0.1",
    "xlsxwriter==3.2.9",
    "yarl==1.22.0",
]
